<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#00FF00"
    tools:context=".VideoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/prevbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:onClick="onPrevPress"
            android:padding="10dp"
            android:text="@string/prevbtn"
            android:textColor="#FFF"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imgbtn1"
                android:layout_width="match_parent"
                android:layout_height="164dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/videopage1"
                android:src="@drawable/thumbnail1"
                android:onClick="onVideo1Press"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/imgbtn2"
                android:layout_width="match_parent"
                android:layout_height="164dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/videopage2"
                android:src="@drawable/thumbnail2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgbtn1" />

            <ImageButton
                android:id="@+id/imgbtn3"
                android:layout_width="match_parent"
                android:layout_height="164dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/videopage3"
                android:src="@drawable/thumbnail3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgbtn2" />

            <ImageButton
                android:id="@+id/imgbtn4"
                android:layout_width="match_parent"
                android:layout_height="164dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/videopage4"
                android:src="@drawable/thumbnail4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgbtn3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>