<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFF00"
    tools:context=".TutorialPage1Activity">

    <!--Prev, Home, Next buttons-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/prevbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:text="@string/prevbtn"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:padding="10dp"
            android:onClick="onPrevPress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/homebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:text="@string/homebtn"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:padding="10dp"
            android:onClick="onPrevPress"
            app:layout_constraintEnd_toStartOf="@+id/nextbtn"
            app:layout_constraintStart_toEndOf="@+id/prevbtn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/nextbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:text="@string/nextbtn"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:padding="10dp"
            android:onClick="onNextPress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/contentpage1"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginTop="20dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>